tests/fixtures/invalid/primitive_typo_bytes.avsc
{
  "type": "record",
  "name": "TestBytes",
  "fields": [
    {
      "name": "data",
      "type": {
        "type": "bites"
      }
    }
  ]
}
